# unraid

./: Expansion.sh  README.md  pyproject.toml
bins/api/: config.yaml  dockerfile  main.py  requirements.txt
